--- a/index.html
+++ b/index.html
@@ -70,16 +70,14 @@
 		<form id="form1" name="user_form" class="main-form">
 			<div class="main-form-input container">
 				<div class="row">
-					<div class="col-12 col-lg-4">
-						<input type="text" class="form-name" id="form1-name" name="user_name" placeholder="Ваше имя"
-							required>
+					<div class="col-12 col-lg-4 input-group">
+						<input type="text" class="form-name" id="form1-name" name="user_name" placeholder="Ваше имя">
 					</div>
-					<div class="col-12 col-lg-4">
+					<div class="col-12 col-lg-4 input-group">
 						<input type="email" class="form-email" id="form1-email" name="user_email" placeholder="E-mail">
 					</div>
-					<div class="col-12 col-lg-4">
-						<input type="tel" class="form-phone" id="form1-phone" name="user_phone"
-							placeholder="Номер телефона" required>
+					<div class="col-12 col-lg-4 input-group">
+						<input type="tel" class="form-phone" id="form1-phone" name="user_phone" placeholder="Номер телефона" >
 					</div>
 				</div>
 			</div>
